--- a/src/components/movieList/MovieList.css
+++ b/src/components/movieList/MovieList.css
@@ -12,3 +12,10 @@ margin:  2.5rem;
     flex-wrap: wrap ;
     justify-content: center;
 }
+
+@media screen and (max-width: 740px){
+    .movie__list {
+        padding: 0 1rem 1rem 1rem;
+    }
+    
+}
