--- a/src/page/home/Home.css
+++ b/src/page/home/Home.css
@@ -51,3 +51,118 @@
     text-align: left;
     width: 50%;
 }
+
+@media only screen and (min-width:380px) and (max-width: 600px){
+  
+    .posterImage{
+        height:300px;
+    
+    }   
+    .posterImage__description {
+        display: none;
+    }
+    .posterImage__title {
+        font-weight: 900;
+        font-size: 1.6rem;
+        margin-bottom: 0.2rem;
+        text-align: left;
+        width: 50%;
+    }
+    .posterImage__rating {
+        margin-left: 1rem;
+        font-size: .8rem;
+    }
+    .posterImage__overlay {
+        position: absolute;
+        padding: 2.4rem;
+        bottom: 0px;
+        height: 70%;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        justify-content: flex-end;
+        align-items: flex-start;
+        background-image: linear-gradient(rgb(0,0,0,0), rgb(0,0,0,1));
+        opacity: 1;
+        transition: opacity .3s;
+    }  
+   
+    .posterImage__runtime {
+        font-size: 1rem;
+        margin-bottom: 2.5rem;
+    }
+
+}
+@media only screen and (max-width: 380px){
+    .posterImage__description {
+        display: none;
+    }
+    .posterImage{
+        height:200px;
+    
+    }   
+    .posterImage__runtime {
+        font-size: 1rem;
+        margin-bottom: 0.5rem;
+    }
+    .posterImage__title {
+        font-weight: 900;
+        font-size: 1.2rem;
+        margin-bottom: 0.2rem;
+        text-align: left;
+        width: 50%;
+    }
+    .posterImage__overlay {
+        position: absolute;
+        padding: 2.4rem;
+        bottom: 0px;
+        height: 70%;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        justify-content: flex-end;
+        align-items: flex-start;
+        background-image: linear-gradient(rgb(0,0,0,0), rgb(0,0,0,1));
+        opacity: 1;
+        transition: opacity .3s;
+    }  
+}
+@media screen and (max-width: 900px) and (min-width: 600px){
+    .posterImage{
+        height:450px;
+    
+    }  
+    .posterImage__description {
+        display: none;
+    }
+    .posterImage__title {
+        font-weight: 900;
+        font-size: 3rem;
+        margin-bottom: 0.5rem;
+        text-align: left;
+        width: 100%;
+    }
+    .posterImage__rating {
+        margin-left: 1rem;
+        font-size: 1rem;
+    }
+   
+    .posterImage__runtime {
+        font-size: 1rem;
+        margin-bottom: 3rem;
+    }
+    .posterImage__overlay {
+        position: absolute;
+        padding: 3rem;
+        bottom: 0px;
+        height: 70%;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        justify-content: flex-end;
+        align-items: flex-start;
+        background-image: linear-gradient(rgb(0,0,0,0), rgb(0,0,0,1));
+        opacity: 1;
+        transition: opacity .3s;
+    }  
+}
