--- a/src/page/movieDetail/movie.css
+++ b/src/page/movieDetail/movie.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction:column;
     align-items: center;
+    overflow:hidden;
 }
 
 .movie__intro {
@@ -45,7 +46,7 @@
 
 .movie__detailRightTop > div{
     text-shadow: 0px 0px 5px #000000;
-    margin-bottom: .5rem;
+    margin-bottom: 0rem;
 }
 
 .movie__name {
@@ -142,4 +143,350 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+@media only screen and (max-width: 480px){
+   
+    .movie__intro {
+        width: 100%;
+    }
+    .movie__detailRightTop > div{
+        text-shadow: 0px 0px 5px #000000;
+    }
+    
+    .movie__backdrop {
+        width: 100%;
+        height: 80% ;
+        object-fit:fill;
+        
+    }
+    
+    .movie__detail {
+        align-items: center;
+        width: 80%;
+        display: flex;
+        position: relative;
+        bottom: 180px;
+    }
+ 
+    .movie__poster {
+        width:25vw;
+        border-radius: 10px;
+        box-shadow: rgba(0, 0, 0, 0.86) 0px 22px 40px 6px;
+    }
+    .movie__detailRight {
+        color: white;
+        display: flex;
+        flex-direction: column;
+        height: 400px;
+        justify-content:flex-end ;
+       overflow:hidden;
+    }
+    .movie__genres {
+        margin: 1rem;
+        /* overflow-wrap: initial; */
+    }
+    
+    .movie__genre {
+        padding: .5rem;
+        border: 2px solid white;
+        border-radius: 20px;
+        margin-right: 1rem;
+        overflow: clip;
+    }
+    .movie__name {
+        font-weight: 800;
+        font-size: 1.2rem;
+    }
+    .movie__voteCount {
+      display: none;
+    }
+    .movie__tagline{
+        display: none;
+    }
+    .movie__links {
+        position: relative;
+        bottom: 120px;
+        display: flex;
+        justify-content: space-between;
+        width: 85%;
+    }
+    .movie__releaseDate{
+        display: none;
+    }
+  
+    
+    .movie__heading {
+        font-size: 1rem;
+        font-weight: 600;
+    }
+    
+    .movie__Button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0.3rem 0rem;
+        border-radius: 20px;
+        cursor: pointer;
+        width: 125px;
+        color: black;
+        font-size: .8rem;
+    }
+    
+    .movie__homeButton {
+        background-color:rgb(255, 0, 0);
+        
+    }
+    
+    .movie__imdbButton {
+        background-color:#f3ce13;
+    }
+    
+    .newTab {
+        margin-left: 1.4rem;
+    }
+    
+    .movie__production {
+        width: 85%;
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+        margin-bottom: 4rem;
+    }
+    
+    
+    .movie__productionComapany {
+        width: 200px;
+        margin: 2rem;
+    }
+    
+    .productionCompanyImage {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        overflow: hidden;
+    }
+    
+}
+
+@media only screen and (max-width: 650px) and (min-width: 480px){
+   
+    .movie__intro {
+        width: 100%;
+    }
+    .movie__detailRightTop > div{
+        text-shadow: 0px 0px 5px #000000;
+    }
+    
+    .movie__backdrop {
+        width: 100%;
+        height: 80% ;
+        object-fit:fill;
+        
+    }
+    
+    .movie__detail {
+        align-items: center;
+        width: 80%;
+        display: flex;
+        position: relative;
+        bottom: 180px;
+    }
+ 
+    .movie__poster {
+        width:25vw;
+        border-radius: 10px;
+        box-shadow: rgba(0, 0, 0, 0.86) 0px 22px 40px 6px;
+    }
+    .movie__detailRight {
+        color: white;
+        display: flex;
+        flex-direction: column;
+        height: 400px;
+        justify-content:flex-end ;
+       overflow:hidden;
+    }
+    .movie__genres {
+        margin: 1rem;
+        /* overflow-wrap: initial; */
+    }
+    
+    .movie__genre {
+        padding: .5rem;
+        border: 2px solid white;
+        border-radius: 20px;
+        margin-right: 1rem;
+        overflow: clip;
+    }
+    .movie__name {
+        font-weight: 800;
+        font-size: 1.2rem;
+    }
+    .movie__voteCount {
+      display: none;
+    }
+    .movie__tagline{
+        display: none;
+    }
+    .movie__links {
+        position: relative;
+        bottom: 120px;
+        display: flex;
+        justify-content: space-between;
+        width: 85%;
+    }
+    .movie__releaseDate{
+        display: none;
+    }
+  
+    
+    .movie__heading {
+        font-size: 1rem;
+        font-weight: 600;
+    }
+    
+    .movie__Button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0.3rem 0rem;
+        border-radius: 20px;
+        cursor: pointer;
+        width: 125px;
+        color: black;
+        font-size: .8rem;
+    }
+    
+    .movie__homeButton {
+        background-color:rgb(255, 0, 0);
+        
+    }
+    
+    .movie__imdbButton {
+        background-color:#f3ce13;
+    }
+    
+    .newTab {
+        margin-left: 1.4rem;
+    }
+    
+    .movie__production {
+        width: 85%;
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+        margin-bottom: 4rem;
+    }
+    
+    
+    .movie__productionComapany {
+        width: 200px;
+        margin: 2rem;
+    }
+    
+    .productionCompanyImage {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        overflow: hidden;
+    }
+    
+}
+
+
+@media only screen and (max-width: 900px) and (min-width: 650px){
+   
+    .movie__intro {
+        width: 100%;
+    }
+    .movie__detailRightTop > div{
+        text-shadow: 0px 0px 5px #000000;
+        margin-bottom: 0rem;
+    }
+
+    
+    .movie__backdrop {
+        width: 100%;
+        height: 80% ;
+        object-fit:fill;
+        
+    }
+    
+    .movie__detail {
+        align-items: center;
+        width: 80%;
+        display: flex;
+        position: relative;
+        bottom: 225px;
+    }
+    
+ 
+    .movie__poster {
+        width:30vw;
+        border-radius: 10px;
+        box-shadow: rgba(0, 0, 0, 0.86) 0px 22px 40px 6px;
+    }
+    
+  
+    
+    .movie__name {
+        font-weight: 600;
+        font-size: 2rem;
+    }
+
+    .movie__links {
+        position: relative;
+        bottom: 120px;
+        display: flex;
+        justify-content: space-between;
+        width: 75%;
+    }
+    
+    .movie__heading {
+        font-size: 1.5rem;
+        font-weight: 600;
+    }
+    
+    .movie__Button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0.5rem .8rem;
+        border-radius: 20px;
+        cursor: pointer;
+        width: 140px;
+        color: black;
+        font-weight: bold;
+    }
+    
+    .movie__production {
+        width: 85%;
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+        margin-bottom: 4rem;
+    }
+    .movie__detailRight {
+        color: white;
+        display: flex;
+        flex-direction: column;
+        height: 400px;
+        justify-content:flex-end ;
+       overflow:hidden;
+    }
+    
+    .movie__productionComapany {
+        width: 200px;
+        margin: 2rem;
+    }
+    
+    .productionCompanyImage {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        overflow: hidden;
+    }
+    
 }
