--- a/src/page/movieDetail/movie.css
+++ b/src/page/movieDetail/movie.css
@@ -1,492 +1,476 @@
 .movie {
-    width: 100%;
-    position: relative;
-    display: flex;
-    flex-direction:column;
-    align-items: center;
-    overflow:hidden;
+  width: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
 }
 
 .movie__intro {
-    width: 80%;
+  width: 80%;
 }
 
 .movie__backdrop {
-    width: 100%;
-    height: 500px;
-    object-fit:cover;
-    object-position: 0 35%;
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+  object-position: 0 35%;
 }
 
 .movie__detail {
-    align-items: center;
-    width: 75%;
-    display: flex;
-    position: relative;
-    bottom: 225px;
+  align-items: center;
+  width: 75%;
+  display: flex;
+  position: relative;
+  bottom: 225px;
 }
 
 .movie__detailLeft {
-    margin-right: 30px;
+  margin-right: 30px;
 }
 
 .movie__poster {
-    width:300px;
-    border-radius: 10px;
-    box-shadow: rgba(0, 0, 0, 0.86) 0px 22px 40px 6px;
+  width: 300px;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.86) 0px 22px 40px 6px;
 }
 
 .movie__detailRight {
-    color: white;
-    display: flex;
-    flex-direction: column;
-    height: 450px;
-    justify-content:space-between ;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  height: 450px;
+  justify-content: space-between;
 }
 
-.movie__detailRightTop > div{
-    text-shadow: 0px 0px 5px #000000;
-    margin-bottom: 0rem;
+.movie__detailRightTop > div {
+  text-shadow: 0px 0px 5px #000000;
+  margin-bottom: 0rem;
 }
 
 .movie__name {
-    font-weight: 600;
-    font-size: 3rem;
+  font-weight: 600;
+  font-size: 3rem;
 }
 
 .movie__voteCount {
-    margin-left: 1rem;
+  margin-left: 1rem;
 }
 
 .movie__genres {
-    margin: 1.25rem 0;
+  margin: 1.25rem 0;
 }
 
 .movie__genre {
-    padding: .5rem;
-    border: 2px solid white;
-    border-radius: 20px;
-    margin-right: 1rem;
+  padding: 0.5rem;
+  border: 2px solid white;
+  border-radius: 20px;
+  margin-right: 1rem;
 }
 
-
 .movie__detailRightBottom {
-    margin: 2rem 0;
-    flex: 0.8;
+  margin: 2rem 0;
+  flex: 0.8;
 }
 
 .synopsisText {
-    font-size: 1.5rem;
-    margin-bottom: 1.25rem;
-    font-weight: 600;
-    display: flex;
-    position: relative;
-    align-items: center;
+  font-size: 1.5rem;
+  margin-bottom: 1.25rem;
+  font-weight: 600;
+  display: flex;
+  position: relative;
+  align-items: center;
 }
 .synopsisText > div:last-of-type {
-    margin-left: auto;
+  margin-left: auto;
 }
 
 .movie__links {
+  position: relative;
+  bottom: 120px;
+  display: flex;
+  justify-content: space-between;
+  width: 75%;
+}
+
+.movie__heading {
+  font-size: 2.2rem;
+}
+
+.movie__Button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.8rem 2rem;
+  border-radius: 20px;
+  cursor: pointer;
+  width: 150px;
+  color: black;
+  font-weight: bold;
+}
+
+.movie__homeButton {
+  background-color: rgb(255, 0, 0);
+}
+
+.movie__imdbButton {
+  background-color: #f3ce13;
+}
+
+.newTab {
+  margin-left: 1.4rem;
+}
+
+.movie__production {
+  width: 85%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  margin-bottom: 4rem;
+}
+
+.movie__productionComapany {
+  width: 200px;
+  margin: 2rem;
+}
+
+.productionCompanyImage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+@media only screen and (max-width: 480px) {
+  .synopsisText {
+    font-size: .8rem;
+  }
+.synopsisDescription{
+    font-size: .5rem;
+}
+  .movie__intro {
+    width: 100%;
+  }
+  .movie__detailRightTop > div {
+    text-shadow: 0px 0px 5px #000000;
+  }
+
+  .movie__backdrop {
+    width: 100%;
+    height: 80%;
+    object-fit: fill;
+  }
+
+  .movie__detail {
+    align-items:center;
+    width: 90%;
+    display: flex;
+    position: relative;
+    bottom: 180px;
+  }
+
+  .movie__poster {
+    width: 28vw;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.86) 0px 22px 40px 6px;
+    position: relative;
+    bottom: 100px;
+  }
+  .movie__detailRight {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    height: 600px;
+    justify-content: end;
+    overflow: hidden;
+  }
+  .movie__genres {
+    margin: 1rem;
+    /* overflow-wrap: initial; */
+  }
+
+  .movie__genre {
+    padding: 0.5rem;
+    border: 2px solid white;
+    border-radius: 20px;
+    margin-right: 1rem;
+    overflow: clip;
+  }
+  .movie__name {
+    font-weight: 800;
+    font-size: 1.2rem;
+  }
+  .movie__voteCount {
+    display: none;
+  }
+  .movie__tagline {
+    display: none;
+  }
+  .movie__links {
     position: relative;
     bottom: 120px;
     display: flex;
     justify-content: space-between;
-    width: 75%;
-}
+    width: 85%;
+  }
+  .movie__releaseDate {
+    display: none;
+  }
 
-.movie__heading {
-    font-size: 2.2rem;
-}
+  .movie__heading {
+    font-size: 1rem;
+    font-weight: 600;
+  }
 
-.movie__Button {
+  .movie__Button {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0.8rem 2rem;
+    padding: 0.3rem 0rem;
     border-radius: 20px;
     cursor: pointer;
-    width: 150px;
+    width: 125px;
     color: black;
-    font-weight: bold;
-}
+    font-size: 0.8rem;
+  }
 
-.movie__homeButton {
-    background-color:rgb(255, 0, 0);
-    
-}
+  .movie__homeButton {
+    background-color: rgb(255, 0, 0);
+  }
 
-.movie__imdbButton {
-    background-color:#f3ce13;
-}
+  .movie__imdbButton {
+    background-color: #f3ce13;
+  }
 
-.newTab {
+  .newTab {
     margin-left: 1.4rem;
-}
+  }
 
-.movie__production {
+  .movie__production {
     width: 85%;
     display: flex;
     justify-content: center;
     align-items: flex-end;
     margin-bottom: 4rem;
-}
+  }
 
-
-.movie__productionComapany {
+  .movie__productionComapany {
     width: 200px;
     margin: 2rem;
-}
+  }
 
-.productionCompanyImage {
+  .productionCompanyImage {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
-@media only screen and (max-width: 480px){
-   
-    .movie__intro {
-        width: 100%;
-    }
-    .movie__detailRightTop > div{
-        text-shadow: 0px 0px 5px #000000;
-    }
-    
-    .movie__backdrop {
-        width: 100%;
-        height: 80% ;
-        object-fit:fill;
-        
-    }
-    
-    .movie__detail {
-        align-items: center;
-        width: 80%;
-        display: flex;
-        position: relative;
-        bottom: 180px;
-    }
- 
-    .movie__poster {
-        width:25vw;
-        border-radius: 10px;
-        box-shadow: rgba(0, 0, 0, 0.86) 0px 22px 40px 6px;
-    }
-    .movie__detailRight {
-        color: white;
-        display: flex;
-        flex-direction: column;
-        height: 400px;
-        justify-content:flex-end ;
-       overflow:hidden;
-    }
-    .movie__genres {
-        margin: 1rem;
-        /* overflow-wrap: initial; */
-    }
-    
-    .movie__genre {
-        padding: .5rem;
-        border: 2px solid white;
-        border-radius: 20px;
-        margin-right: 1rem;
-        overflow: clip;
-    }
-    .movie__name {
-        font-weight: 800;
-        font-size: 1.2rem;
-    }
-    .movie__voteCount {
-      display: none;
-    }
-    .movie__tagline{
-        display: none;
-    }
-    .movie__links {
-        position: relative;
-        bottom: 120px;
-        display: flex;
-        justify-content: space-between;
-        width: 85%;
-    }
-    .movie__releaseDate{
-        display: none;
-    }
-  
-    
-    .movie__heading {
-        font-size: 1rem;
-        font-weight: 600;
-    }
-    
-    .movie__Button {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 0.3rem 0rem;
-        border-radius: 20px;
-        cursor: pointer;
-        width: 125px;
-        color: black;
-        font-size: .8rem;
-    }
-    
-    .movie__homeButton {
-        background-color:rgb(255, 0, 0);
-        
-    }
-    
-    .movie__imdbButton {
-        background-color:#f3ce13;
-    }
-    
-    .newTab {
-        margin-left: 1.4rem;
-    }
-    
-    .movie__production {
-        width: 85%;
-        display: flex;
-        justify-content: center;
-        align-items: flex-end;
-        margin-bottom: 4rem;
-    }
-    
-    
-    .movie__productionComapany {
-        width: 200px;
-        margin: 2rem;
-    }
-    
-    .productionCompanyImage {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        overflow: hidden;
-    }
-    
+    overflow: hidden;
+  }
 }
 
-@media only screen and (max-width: 650px) and (min-width: 480px){
-   
-    .movie__intro {
-        width: 100%;
-    }
-    .movie__detailRightTop > div{
-        text-shadow: 0px 0px 5px #000000;
-    }
-    
-    .movie__backdrop {
-        width: 100%;
-        height: 80% ;
-        object-fit:fill;
-        
-    }
-    
-    .movie__detail {
-        align-items: center;
-        width: 80%;
-        display: flex;
-        position: relative;
-        bottom: 180px;
-    }
- 
-    .movie__poster {
-        width:25vw;
-        border-radius: 10px;
-        box-shadow: rgba(0, 0, 0, 0.86) 0px 22px 40px 6px;
-    }
-    .movie__detailRight {
-        color: white;
-        display: flex;
-        flex-direction: column;
-        height: 400px;
-        justify-content:flex-end ;
-       overflow:hidden;
-    }
-    .movie__genres {
-        margin: 1rem;
-        /* overflow-wrap: initial; */
-    }
-    
-    .movie__genre {
-        padding: .5rem;
-        border: 2px solid white;
-        border-radius: 20px;
-        margin-right: 1rem;
-        overflow: clip;
-    }
-    .movie__name {
-        font-weight: 800;
-        font-size: 1.2rem;
-    }
-    .movie__voteCount {
-      display: none;
-    }
-    .movie__tagline{
-        display: none;
-    }
-    .movie__links {
-        position: relative;
-        bottom: 120px;
-        display: flex;
-        justify-content: space-between;
-        width: 85%;
-    }
-    .movie__releaseDate{
-        display: none;
-    }
-  
-    
-    .movie__heading {
-        font-size: 1rem;
-        font-weight: 600;
-    }
-    
-    .movie__Button {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 0.3rem 0rem;
-        border-radius: 20px;
-        cursor: pointer;
-        width: 125px;
-        color: black;
-        font-size: .8rem;
-    }
-    
-    .movie__homeButton {
-        background-color:rgb(255, 0, 0);
-        
-    }
-    
-    .movie__imdbButton {
-        background-color:#f3ce13;
-    }
-    
-    .newTab {
-        margin-left: 1.4rem;
-    }
-    
-    .movie__production {
-        width: 85%;
-        display: flex;
-        justify-content: center;
-        align-items: flex-end;
-        margin-bottom: 4rem;
-    }
-    
-    
-    .movie__productionComapany {
-        width: 200px;
-        margin: 2rem;
-    }
-    
-    .productionCompanyImage {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        overflow: hidden;
-    }
-    
+@media only screen and (max-width: 650px) and (min-width: 480px) {
+  .movie__intro {
+    width: 100%;
+  }
+  .movie__detailRightTop > div {
+    text-shadow: 0px 0px 5px #000000;
+  }
+
+  .movie__backdrop {
+    width: 100%;
+    height: 80%;
+    object-fit: fill;
+  }
+
+  .movie__detail {
+    align-items: center;
+    width: 80%;
+    display: flex;
+    position: relative;
+    bottom: 180px;
+  }
+
+  .movie__poster {
+    width: 25vw;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.86) 0px 22px 40px 6px;
+  }
+  .movie__detailRight {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    height: 500px;
+    justify-content: end;
+    /* overflow:hidden; */
+  }
+  .movie__genres {
+    margin: 1rem;
+    /* overflow-wrap: initial; */
+  }
+
+  .movie__genre {
+    padding: 0.5rem;
+    border: 2px solid white;
+    border-radius: 20px;
+    margin-right: 1rem;
+    overflow: clip;
+  }
+  .movie__name {
+    font-weight: 800;
+    font-size: 2rem;
+  }
+  .movie__voteCount {
+    display: none;
+  }
+  .movie__tagline {
+    display: none;
+  }
+  .movie__links {
+    position: relative;
+    bottom: 120px;
+    display: flex;
+    justify-content: space-between;
+    width: 85%;
+  }
+  .movie__releaseDate {
+    display: none;
+  }
+
+  .movie__heading {
+    font-size: 1rem;
+    font-weight: 600;
+  }
+
+  .movie__Button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0.3rem 0rem;
+    border-radius: 20px;
+    cursor: pointer;
+    width: 125px;
+    color: black;
+    font-size: 0.8rem;
+  }
+
+  .movie__homeButton {
+    background-color: rgb(255, 0, 0);
+  }
+
+  .movie__imdbButton {
+    background-color: #f3ce13;
+  }
+
+  .newTab {
+    margin-left: 1.4rem;
+  }
+
+  .movie__production {
+    width: 85%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    margin-bottom: 4rem;
+  }
+
+  .movie__productionComapany {
+    width: 200px;
+    margin: 2rem;
+  }
+
+  .productionCompanyImage {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+  }
 }
 
+@media only screen and (max-width: 900px) and (min-width: 650px) {
+  .movie__intro {
+    width: 100%;
+  }
+  .movie__detailRightTop > div {
+    text-shadow: 0px 0px 5px #000000;
+    margin-bottom: 0rem;
+  }
 
-@media only screen and (max-width: 900px) and (min-width: 650px){
-   
-    .movie__intro {
-        width: 100%;
-    }
-    .movie__detailRightTop > div{
-        text-shadow: 0px 0px 5px #000000;
-        margin-bottom: 0rem;
-    }
+  .movie__backdrop {
+    width: 100%;
+    height: 80%;
+    object-fit: fill;
+  }
 
-    
-    .movie__backdrop {
-        width: 100%;
-        height: 80% ;
-        object-fit:fill;
-        
-    }
-    
-    .movie__detail {
-        align-items: center;
-        width: 80%;
-        display: flex;
-        position: relative;
-        bottom: 225px;
-    }
-    
- 
-    .movie__poster {
-        width:30vw;
-        border-radius: 10px;
-        box-shadow: rgba(0, 0, 0, 0.86) 0px 22px 40px 6px;
-    }
-    
-  
-    
-    .movie__name {
-        font-weight: 600;
-        font-size: 2rem;
-    }
+  .movie__detail {
+    align-items: center;
+    width: 80%;
+    display: flex;
+    position: relative;
+    bottom: 225px;
+  }
 
-    .movie__links {
-        position: relative;
-        bottom: 120px;
-        display: flex;
-        justify-content: space-between;
-        width: 75%;
-    }
-    
-    .movie__heading {
-        font-size: 1.5rem;
-        font-weight: 600;
-    }
-    
-    .movie__Button {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 0.5rem .8rem;
-        border-radius: 20px;
-        cursor: pointer;
-        width: 140px;
-        color: black;
-        font-weight: bold;
-    }
-    
-    .movie__production {
-        width: 85%;
-        display: flex;
-        justify-content: center;
-        align-items: flex-end;
-        margin-bottom: 4rem;
-    }
-    .movie__detailRight {
-        color: white;
-        display: flex;
-        flex-direction: column;
-        height: 400px;
-        justify-content:flex-end ;
-       overflow:hidden;
-    }
-    
-    .movie__productionComapany {
-        width: 200px;
-        margin: 2rem;
-    }
-    
-    .productionCompanyImage {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        overflow: hidden;
-    }
-    
+  .movie__poster {
+    width: 30vw;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.86) 0px 22px 40px 6px;
+  }
+
+  .movie__name {
+    font-weight: 600;
+    font-size: 2rem;
+  }
+
+  .movie__links {
+    position: relative;
+    bottom: 120px;
+    display: flex;
+    justify-content: space-between;
+    width: 75%;
+  }
+
+  .movie__heading {
+    font-size: 1.5rem;
+    font-weight: 600;
+  }
+
+  .movie__Button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0.5rem 0.8rem;
+    border-radius: 20px;
+    cursor: pointer;
+    width: 140px;
+    color: black;
+    font-weight: bold;
+  }
+
+  .movie__production {
+    width: 85%;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+    margin-bottom: 4rem;
+  }
+  .movie__detailRight {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    height: 600px;
+    justify-content: end;
+  }
+
+  .movie__productionComapany {
+    width: 200px;
+    margin: 2rem;
+  }
+
+  .productionCompanyImage {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+  }
 }
